@@ -112,3 +112,9 @@ pluginBundle {
         }
     }
 }
+
+tasks.withType(Test) {
+    if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)) {
+        jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED", "--add-opens", "java.base/java.lang=ALL-UNNAMED")
+    }
+}
